[package]
name = "config-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
figment = { version = "0.10", features = ["env", "yaml"] }
serde = { version = "1", features = ["derive"] }
serde_with = "3.3"
